--- a/index.html
+++ b/index.html
@@ -23,12 +23,12 @@
         <div class="flex">
             <div class="flex">
                 <figure>
-                    <img height="90px" src="./assets-3/img/male1.png" alt="">
+                    <img id="image" height="90px" src="./assets-3/img/male1.png" alt="">
                 </figure>
                 <div class="flex flex-column">
-                    <h5>Marco Bianchi</h5>
-                    <span>Designer</span>
-                    <span>marcobianchi@team.com</span>
+                    <h5 id="name">Marco Bianchi</h5>
+                    <span id="role">Designer</span>
+                    <span id="email">marcobianchi@team.com</span>
                 </div>
             </div>
             
