add: all cards with javascript

--- a/index.html
+++ b/index.html
@@ -31,11 +31,11 @@
                     <span id="email">marcobianchi@team.com</span>
                 </div>
             </div>
-            
+        </div>    
     </main>
 
 
 
-    <script href="./assets-3/script.js"></script>
+    <script src="./assets-3/script.js"></script>
 </body>
 </html>
