add: change id for forms

--- a/index.html
+++ b/index.html
@@ -37,17 +37,17 @@
         <div id="form-container">
 
         <form action="">
-            <label for="name">Name</label>
-            <input id="name" type="text" name="name" value="" placeholder="scrivi il nome">
+            <label for="form-name">Name</label>
+            <input id="form-name" type="text" name="name" value="" placeholder="scrivi il nome">
 
-            <label for="role">Role</label>
-            <input id="role" type="text" name="role" value="" placeholder="scrivi il ruolo">
+            <label for="form-role">Role</label>
+            <input id="form-role" type="text" name="role" value="" placeholder="scrivi il ruolo">
 
-            <label for="email">E-mail</label>
-            <input id="email" type="text" name="email" value="" placeholder="scrivi la tua email">
+            <label for="form-email">E-mail</label>
+            <input id="form-email" type="text" name="email" value="" placeholder="scrivi la tua email">
 
-            <label for="img">Image</label>
-            <input id="img" type="text" name="img" value="" placeholder="scrivi il nome dell'immgine">
+            <label for="form-img">Image</label>
+            <input id="form-img" type="text" name="img" value="" placeholder="scrivi il nome dell'immgine">
         
             <button id="btn" type="submit">Invia</button>
           </form>
